Added newArrayList and newLinkedList methods to ListsOps, hardended appendItem and appendLists, updated Javadocs, and added related tests